--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="containers">
                 <h1>La SATISFACTION DU CLIENT NOTRE PRIORITE.</h1>
                 <p> Notre équipe dévouée travaille sans relâche pour s'assurer que
-                    chaque expérience d'achat soit agréable et mémorable.</p>
+                    chaque expérience d'achat soit amorable.</p>
                 <a href="#demo" class="cta-button">Rejoindre la Famille</a>
             </div>
         </section>
