--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                 <ul class="nav__list">
                     <li class="nav__item">
                         <a href="index.html" class="nav__link">
-                            <i class="fa-solid fa-shop nav__icon"></i>
+                            <i class="fa-solid fa-house nav__icon"></i>
                             <span class="nav__name">Accueil</span>
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="about.html" class="nav__link">
-                            <i class="fa-solid fa-info nav__icon"></i>
+                            <i class="fa-brands fa-accusoft nav__icon"></i>
                             <span class="nav__name">Nos Cultes</span>
                         </a>
                     </li>
@@ -68,7 +68,7 @@
                     </li>
                     <li class="nav__item">
                         <a href="about.html" class="nav__link">
-                            <i class="fa-solid fa-info nav__icon"></i>
+                            <i class="fa-solid fa-users nav__icon"></i>
                             <span class="nav__name">F-I</span>
                         </a>
                     </li>
