--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="containers">
-                <h1>La SATISFACTION DU CLIENT NOTRE PRIORITE.</h1>
-                <p> Notre équipe dévouée travaille sans relâche pour s'assurer que
-                    chaque expérience d'achat soit amorable.</p>
+                <h1>PLUS QU'UNE EGLISE UNE FAMILLE </h1>
+                <p> Amour fraternite au coeur de toute actions.</p>
                 <a href="#demo" class="cta-button">Rejoindre la Famille</a>
             </div>
         </section>
@@ -103,11 +102,8 @@
             <div class="containers">
                 <h2 class="section-title">Vision</h2>
                 <p class="section-subtitle">
-                    Chez DAMAS | GLOBAL, nous croyons en la satisfaction du client avant
-                    tout. Notre équipe dévouée travaille sans relâche pour s'assurer que
-                    chaque expérience d'achat soit agréable et mémorable. Nous sélectionnons
-                    soigneusement nos produits pour garantir qu'ils répondent aux normes les
-                    plus élevées de qualité et de durabilité.
+                    Construire des hommes et des femmes inspirent et influencent  positivement leur environnement
+                    pour la gloire de Dieu et l'avancement de l'humanité. 
                 </p>
             </div>
         </section>
@@ -117,17 +113,12 @@
             <div class="containers">
                 <h2 class="section-title">Mission</h2>
                 <p class="section-subtitle">
-                    Notre mission est de fournir à nos clients des produits qui enrichissent
-                    leur vie quotidienne. Que vous recherchiez des articles pour la maison,
-                    des gadgets technologiques, ou des accessoires de mode, nous avons ce
-                    qu'il vous faut.
+                    Un centre de refuge, <br>de transformation de spirituel, <br>de formations d'adoration d'excellence,d'edification et d'epanouissement de puissance economique et finaciere de communion et d'expression un centre en devenir un centre multiracial,un centre d'impact.
                 </p>
                 <div class="company-info">
                     <p>
-                        Merci de faire partie de la famille<strong> DAMAS | GLOBAL</strong>. Nous sommes impatients
-                        de vous servir et de vous aider à trouver exactement ce dont vous avez
-                        besoin.
-                    </p>
+                        Grande est notre joie de vous accueil dans famille<strong> IMPACT CENTRE CHHRETIEN | EGLISE DE LOML</strong>. Nous sommes impatients
+                        de vous servir et de vous aider comme une famille dans votre cheminement spirituel
                 </div>
             </div>
         </section>
@@ -135,8 +126,8 @@
         <!-- Data Insights Section -->
         <section class="adresse">
             <div class="container">
-                <h2 class="section-title">Adresse</h2>
-                <p class="section-subtitle">Nous somme a agoe assiyeye non loin de la staion nrl</p>
+                <h2 class="section-title">Nos Adresse</h2>
+                <p class="section-subtitle">Nous somme present ddans les 5regions du Togo a travers differents adresse</p>
                 <div class="stats-grid">
                     <div class="stat-card">
                         <div class="stat-value">100M+</div>
@@ -165,6 +156,8 @@
                 </div>
             </div>
         </section>
+        <section class="eglise"></section>
+        <section class="centrale"></section>
         <!-- footer -->
         <footer>
             <div class="footer-content">
@@ -172,13 +165,14 @@
                     <div class="footer-section">
                         <h3>Notre Vision</h3>
                         <ul>
-                            <p>Vôtre statisfaction nôtre priorité !</p>
+                            <p>une Famille</p>
                         </ul>
                     </div>
                     <div class="footer-section">
                         <h3>Contact :</h3>
                         <ul>
-                            <p>+228 90 38 18 83<br>Agoè Assiyéye<br>Non loin carrefour Cool Catch</p>
+                            <p>Route de l’aéroport 2ème von après la station NRL, ancien Oando
+                            (von de l’ASAIGE et de l’IFDC) et ensuite première von à gauche.</p>
                         </ul>
                     </div>
                     <div class="footer-section">
