--- a/cultes.html
+++ b/cultes.html
@@ -71,6 +71,8 @@
         </div>
       </section>
       <section class="produits"></section>
+      <section class="eglise"></section>
+      <section class="centrale"></section>
     </div>
     <!-- Footer -->
     <footer>
