--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
     </header>
     <main>
         <!-- Breadcrumb -->
-        <div class="breadcrumbs container">
+        <!-- <div class="breadcrumbs container">
             > Accueil
-        </div>
+        </div> -->
         <!-- Hero Section -->
         <section class="hero">
             <div class="containers">
