--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="containers">
-                <h1>PLUS QU'UNE EGLISE UNE FAMILLEE </h1>
+                <h1>PLUS QU'UNE EGLISE UNE FAMILLE </h1>
                 <p> Amour fraternite au coeur de toute actions.</p>
                 <a href="#demo" class="cta-button">Rejoindre la Famille</a>
             </div>
