--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="containers">
-                <h1>PLUS QU'UNE EGLISE UNE FAMILLE </h1>
-                <p> Amour fraternite au coeur de toute actions.</p>
+                <h1>PLUS QU'UNE EGLISE, UNE FAMILLE </h1>
+                <p> Amour fraternite au coeur de toutes actions.</p>
                 <a href="#demo" class="cta-button">Rejoindre la Famille</a>
             </div>
         </section>
@@ -127,31 +127,27 @@
         <section class="adresse">
             <div class="container">
                 <h2 class="section-title">Nos Adresse</h2>
-                <p class="section-subtitle">Nous somme present ddans les 5regions du Togo a travers differents adresse</p>
+                <p class="section-subtitle">Present dans les 5 regions du Togo a travers diverse adresse</p>
                 <div class="stats-grid">
                     <div class="stat-card">
-                        <div class="stat-value">100M+</div>
-                        <div class="stat-label">Websites Analyzed</div>
+                        <div class="stat-value">13</div>
+                        <div class="stat-label">Region Maritime</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-value">4M+</div>
-                        <div class="stat-label">Apps Covered</div>
+                        <div class="stat-value">5</div>
+                        <div class="stat-label">Region Plateaux</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-value">235M+</div>
-                        <div class="stat-label">Product SKUs</div>
+                        <div class="stat-value">4</div>
+                        <div class="stat-label">Region Centrale</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-value">10Y</div>
-                        <div class="stat-label">Historical Data</div>
+                        <div class="stat-value">3</div>
+                        <div class="stat-label">Region de la Kara</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-value">10B</div>
-                        <div class="stat-label">Content Pages</div>
-                    </div>
-                    <div class="stat-card">
-                        <div class="stat-value">250M</div>
-                        <div class="stat-label">Display Ads Tracked</div>
+                        <div class="stat-value">2</div>
+                        <div class="stat-label">Region des Savanes</div>
                     </div>
                 </div>
             </div>
