--- a/cultes.html
+++ b/cultes.html
@@ -93,7 +93,7 @@
           <div class="footer-section">
             <h3>Pages Social</h3>
             <div class="social-links">
-              <a href="#facebook" title="Facebook">f</a>
+              <a href="#facebook" title="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
               <a href="#twitter" title="Twitter">𝕏</a>
               <a href="#linkedin" title="WhatsApp">w</a>
               <a href="#instagram" title="Instagram">📷</a>
