--- a/index.html
+++ b/index.html
@@ -174,16 +174,17 @@
                     <div class="footer-section">
                         <h3>Pages Social</h3>
                         <div class="social-links">
-                            <a href="#facebook" title="Facebook">f</a>
-                            <a href="#twitter" title="Twitter">𝕏</a>
-                            <a href="#linkedin" title="WhatsApp">w</a>
-                            <a href="#instagram" title="Instagram">📷</a>
-                        </div>
-
-                        <div class="footer-bottom">
-                            <p>Togo Lome &copy; 2025</p>
+                            <a href="#facebook" title="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#twitter" title="Twitter"><i class="fa-brands fa-x-twitter"></i></a>
+                            <a href="#linkedin" title="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+                            <a href="#instagram" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
                         </div>
                     </div>
+                     <div class="footer-bottom">
+                            <p>Togo Lome &copy; 2025</p>
+                       
+                    </div> 
+            </div>           
         </footer>
 
         <!-- Boite de dialogue articles -->
