--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <section class="hero">
             <div class="containers">
                 <h1>PLUS QU'UNE EGLISE, UNE FAMILLE </h1>
-                <p> Amour fraternite au coeur de toutes actions.</p>
+                <p> Amour fraternité au coeur de toutes actions.</p>
                 <a href="#demo" class="cta-button">Rejoindre la Famille</a>
             </div>
         </section>
@@ -113,11 +113,14 @@
             <div class="containers">
                 <h2 class="section-title">Mission</h2>
                 <p class="section-subtitle">
-                    Un centre de refuge, <br>de transformation de spirituel, <br>de formations d'adoration d'excellence,d'edification et d'epanouissement de puissance economique et finaciere de communion et d'expression un centre en devenir un centre multiracial,un centre d'impact.
+                    Un centre de refuge, <br>de transformation de spirituel,
+                     <br>de formations d'adoration d'excellence,
+                     d'edification et d'epanouissement de puissance economique et finaciere
+                      de communion et d'expression un centre en devenir, un centre multiracial,un centre d'impact.
                 </p>
                 <div class="company-info">
                     <p>
-                        Grande est notre joie de vous accueil dans famille<strong> IMPACT CENTRE CHHRETIEN | EGLISE DE LOML</strong>. Nous sommes impatients
+                        Grande est notre joie de vous accueillir dans la famille<strong> IMPACT CENTRE CHHRETIEN | EGLISE DE LOME</strong>. Nous sommes impatients
                         de vous servir et de vous aider comme une famille dans votre cheminement spirituel
                 </div>
             </div>
@@ -127,7 +130,7 @@
         <section class="adresse">
             <div class="container">
                 <h2 class="section-title">Nos Adresse</h2>
-                <p class="section-subtitle">Present dans les 5 regions du Togo a travers diverse adresse</p>
+                <p class="section-subtitle">Présent dans les 5 regions du Togo a travers diverse adresse</p>
                 <div class="stats-grid">
                     <div class="stat-card">
                         <div class="stat-value">13</div>
@@ -161,11 +164,11 @@
                     <div class="footer-section">
                         <h3>Notre Vision</h3>
                         <ul>
-                            <p>une Famille</p>
+                            <p>Une Famille</p>
                         </ul>
                     </div>
                     <div class="footer-section">
-                        <h3>Contact :</h3>
+                        <h3>Notre Position :</h3>
                         <ul>
                             <p>Route de l’aéroport 2ème von après la station NRL, ancien Oando
                             (von de l’ASAIGE et de l’IFDC) et ensuite première von à gauche.</p>
