--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <nav class="nav container">
             <div class="logo">
                 <div class="logoContainer">
-                <div>
-                    <img src="profil/Logo_Icc.png" alt="">
+                    <div>
+                        <img src="profil/Logo_Icc.png" alt="">
+                    </div>
+                    <a href="#" class="logo">IMPACT CENTRE CHRETIEN <br><span>EGLISE DE LOME</span> </a>
                 </div>
-                <a href="#" class="logo">IMPACT CENTRE CHRETIEN <br><span>EGLISE DE LOME</span> </a>
-                </div>
-                
+
             </div>
             <!-- Barre de recherche -->
             <form class="Researche">
@@ -102,8 +102,8 @@
             <div class="containers">
                 <h2 class="section-title">Vision</h2>
                 <p class="section-subtitle">
-                    Construire des hommes et des femmes inspirent et influencent  positivement leur environnement
-                    pour la gloire de Dieu et l'avancement de l'humanité. 
+                    Construire des hommes et des femmes inspirent et influencent positivement leur environnement
+                    pour la gloire de Dieu et l'avancement de l'humanité.
                 </p>
             </div>
         </section>
@@ -113,14 +113,22 @@
             <div class="containers">
                 <h2 class="section-title">Mission</h2>
                 <p class="section-subtitle">
-                    Un centre de refuge, <br>de transformation de spirituel,
-                     <br>de formations d'adoration d'excellence,
-                     d'edification et d'epanouissement de puissance economique et finaciere
-                      de communion et d'expression un centre en devenir, un centre multiracial,un centre d'impact.
+                    Un centre de refuge <br>
+                    de transformation de spirituel<br>
+                    de formations <br>
+                    d'adoration <br>
+                    d'excellence,<br>
+                    d'edification et d'epanouissement <br>
+                    de puissance economique et finaciere <br>
+                    de communion et d'expression <br>
+                    un centre en devenir<br>
+                    un centre multiracial <br>
+                    un centre d'impact.
                 </p>
                 <div class="company-info">
                     <p>
-                        Grande est notre joie de vous accueillir dans la famille<strong> IMPACT CENTRE CHHRETIEN | EGLISE DE LOME</strong>. Nous sommes impatients
+                        Grande est notre joie de vous accueillir dans la famille<strong> IMPACT CENTRE CHHRETIEN |
+                            EGLISE DE LOME</strong>. Nous sommes impatients
                         de vous servir et de vous aider comme une famille dans votre cheminement spirituel
                 </div>
             </div>
@@ -171,7 +179,7 @@
                         <h3>Notre Position :</h3>
                         <ul>
                             <p>Route de l’aéroport 2ème von après la station NRL, ancien Oando
-                            (von de l’ASAIGE et de l’IFDC) et ensuite première von à gauche.</p>
+                                (von de l’ASAIGE et de l’IFDC) et ensuite première von à gauche.</p>
                         </ul>
                     </div>
                     <div class="footer-section">
@@ -182,7 +190,7 @@
                             <a href="#linkedin" title="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
                         </div>
                     </div>
-            </div>           
+                </div>
         </footer>
 
         <!-- Boite de dialogue articles -->
@@ -204,39 +212,48 @@
                     <button id="copy-link" class="btn action">Copier</button>
                 </div>
                 <div class="share-buttons">
-                    <a id="share-whatsapp-business" class="share-btn whatsapp" target="_blank" rel="noopener" title="Partager sur WhatsApp Business" aria-label="Partager sur WhatsApp Business">
+                    <a id="share-whatsapp-business" class="share-btn whatsapp" target="_blank" rel="noopener"
+                        title="Partager sur WhatsApp Business" aria-label="Partager sur WhatsApp Business">
                         <i class="fa-brands fa-whatsapp" aria-hidden="true"></i>
                         <span class="share-label">WhatsApp Bus.</span>
                     </a>
-                    <a id="share-whatsapp" class="share-btn whatsapp" target="_blank" rel="noopener" title="Partager sur WhatsApp" aria-label="Partager sur WhatsApp">
+                    <a id="share-whatsapp" class="share-btn whatsapp" target="_blank" rel="noopener"
+                        title="Partager sur WhatsApp" aria-label="Partager sur WhatsApp">
                         <i class="fa-brands fa-whatsapp" aria-hidden="true"></i>
                         <span class="share-label">WhatsApp</span>
                     </a>
-                    <a id="share-facebook" class="share-btn facebook" target="_blank" rel="noopener" title="Partager sur Facebook" aria-label="Partager sur Facebook">
+                    <a id="share-facebook" class="share-btn facebook" target="_blank" rel="noopener"
+                        title="Partager sur Facebook" aria-label="Partager sur Facebook">
                         <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
                         <span class="share-label">Facebook</span>
                     </a>
-                    <a id="share-twitter" class="share-btn twitter" target="_blank" rel="noopener" title="Partager sur X (Twitter)" aria-label="Partager sur X (Twitter)">
+                    <a id="share-twitter" class="share-btn twitter" target="_blank" rel="noopener"
+                        title="Partager sur X (Twitter)" aria-label="Partager sur X (Twitter)">
                         <i class="fa-brands fa-twitter" aria-hidden="true"></i>
                         <span class="share-label">X</span>
                     </a>
-                    <a id="share-gmail" class="share-btn gmail" target="_blank" rel="noopener" title="Partager par Gmail" aria-label="Partager par Gmail">
+                    <a id="share-gmail" class="share-btn gmail" target="_blank" rel="noopener"
+                        title="Partager par Gmail" aria-label="Partager par Gmail">
                         <i class="fa-solid fa-envelope" aria-hidden="true"></i>
                         <span class="share-label">Gmail</span>
                     </a>
-                    <a id="share-instagram" class="share-btn instagram" target="_blank" rel="noopener" title="Ouvrir Instagram" aria-label="Ouvrir Instagram">
+                    <a id="share-instagram" class="share-btn instagram" target="_blank" rel="noopener"
+                        title="Ouvrir Instagram" aria-label="Ouvrir Instagram">
                         <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                         <span class="share-label">Instagram</span>
                     </a>
-                    <a id="share-google-keep" class="share-btn google-keep" target="_blank" rel="noopener" title="Ouvrir Google Keep" aria-label="Ouvrir Google Keep">
+                    <a id="share-google-keep" class="share-btn google-keep" target="_blank" rel="noopener"
+                        title="Ouvrir Google Keep" aria-label="Ouvrir Google Keep">
                         <i class="fa-solid fa-note-sticky" aria-hidden="true"></i>
                         <span class="share-label">Keep</span>
                     </a>
-                    <button id="share-screenshot" class="share-btn screenshot" title="Télécharger une capture d'écran" aria-label="Télécharger une capture d'écran">
+                    <button id="share-screenshot" class="share-btn screenshot" title="Télécharger une capture d'écran"
+                        aria-label="Télécharger une capture d'écran">
                         <i class="fa-solid fa-camera" aria-hidden="true"></i>
                         <span class="share-label">Capture</span>
                     </button>
-                    <button id="share-qr" class="share-btn qr" title="Télécharger le code QR" aria-label="Télécharger le code QR">
+                    <button id="share-qr" class="share-btn qr" title="Télécharger le code QR"
+                        aria-label="Télécharger le code QR">
                         <i class="fa-solid fa-qrcode" aria-hidden="true"></i>
                         <span class="share-label">QR</span>
                     </button>
